# RDM-Vision

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-compose  README.md  build.rs  config.json  docker-compose.yml  install.sh
proto/: restore.proto
src/: lib.rs  main.rs  preview.rs
src/api/: client.rs  middleware.rs  mod.rs
src/config/: settings.rs
src/core/: align.rs  decode.rs  detect.rs  focus.rs  mod.rs  prep.rs
src/data/: code.rs  frame.rs  mod.rs  region.rs
src/error/: error.rs  mod.rs
src/pipeline/: mod.rs  runner.rs
src/service/: mod.rs
src/service/camera/: base.rs  docker.rs  gige.rs  grpc.rs  manager.rs  mod.rs  rtsp.rs
src/service/restore/: client.rs  mod.rs  proto.rs
src/ws/: middleware.rs  mod.rs  server.rs
