[package]
name = "rdm-vision"
version = "0.1.0"
edition = "2024"

[lib]
name = "rdm_vision"
path = "src/lib.rs"

[[bin]]
name = "rdm-vision"
path = "src/main.rs"

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "process"] }
prost = "0.13"
tonic = "0.12"
ort = "2.0.0-rc.12"
rxing = "0.9.1"
minifb = "0.27"


[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
