[package]
name = "rdm-vision"
version = "0.1.0"
edition = "2024"

[lib]
name = "rdm_vision"
path = "src/lib.rs"

[[bin]]
name = "rdm-vision"
path = "src/main.rs"

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "process", "net"] }
tokio-tungstenite = "0.24"
prost = "0.13"
tonic = "0.12"
minifb = "0.27"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
viva-genicam = "0.2.3"
rxing = "0.7"
retina = "0.4.19"
openh264 = "0.9.7"
futures = "0.3"
url = "2"

[target.'cfg(windows)'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["directml"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["cuda", "rocm", "openvino"] }

[target.'cfg(not(any(windows, target_os = "linux")))'.dependencies]
ort = { version = "2.0.0-rc.12" }


[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
